--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".EditUserPhoneNumActivity"></activity>
+        <activity android:name=".EditUserEmailActivity"></activity>
+        <activity android:name=".EditUserPhoneNumActivity" />
         <activity android:name=".EditUserNickNameActivity" />
         <activity android:name=".MainActivity">
             <intent-filter>
